Page MenuHome GnuPG

Add tooltip to Kleo's advanced key generation dialog
Closed, ResolvedPublic

Description

Some users receive instructions which do not mention ECDH, thus they wonder whether they should remove the check mark for ECDH. Obviously this leads to an non-encryption capable key.

To help them I suggest to add a tooltip here.

Event Timeline

werner triaged this task as Normal priority.Jan 14 2022, 12:07 PM
werner created this task.
werner created this object with edit policy "Contributor (Project)".

If the user unselects + ECDH, then the checkmark before Encryption under Certificate Usage is removed. I'm not sure whether adding a tooltip would help if they don't notice this.

In my opinion, people who wonder about the technical details shouldn't be allowed to edit the technical details in the first place.

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

I have added tooltips to the + ECDH and the + Elgamal checkboxes. Hope this helps.