Add tooltip to subkeys that are required for encryption

Hopefully those tooltips will help people decide whether they really
do not need the encryption subkeys.

GnuPG-bug-id: 5781